--- a/server/views/partials/kthFooter.handlebars
+++ b/server/views/partials/kthFooter.handlebars
@@ -1,7 +1,13 @@
-{{!-- TODO: KTH-style-10: Väldigt få skillnader mellan denna och studentFooter, bara PublicSiteCtrl (/_ready) som använder denna.--}}
-
-<!-- add "scroll-to-top" button when scrolled down -->
 <!--indexOff: all-->
+<!-- add "scroll-to-top" button when scrolled down -->
 <div id="back-to-top" role="link" aria-label="{{i18n 'back_to_top_label' lang}}"></div>
-<footer class="kth-footer {{{theme}}}"><div class="kth-footer__content">{{{blocks.footer}}}</div></footer>
+<footer class="kth-footer {{{theme}}}">
+    <div class="kth-footer__content">
+        {{#if studentWeb}}
+            {{{blocks.studentFooter}}}
+        {{else}}
+            {{{blocks.footer}}}
+        {{/if}}
+    </div>
+</footer>
 <!--indexOn: all-->
