--- a/public/css/_shared.scss
+++ b/public/css/_shared.scss
@@ -20,6 +20,10 @@
 
 #mainContent {
   padding: 0;
+
+  header {
+    margin-bottom: 1.5rem;
+  }
 }
 
 #mainMenu + #mainContent {
@@ -36,6 +40,12 @@
   }
 }
 
+.kth-local-navigation--mobile {
+  h2 {
+    margin-inline-start: 1rem;
+  }
+}
+
 .kth-content.articleNavigation {
   #breadcrumbs {
     margin-top: 15px;
@@ -48,6 +58,11 @@
       display: flex;
     }
   }
+}
+
+// TODO: KTH-style-10: Alerts hade tidigare en margin som default, bra att den är borttagen, men lägger till den tillfälligt för att in förstöra nuvarande gränssnitt.
+.kth-alert {
+  margin-bottom: 30px;
 }
 
 // TODO: KTH-style-10: Hur bör page-sub-heading, kanske ska ligga i _fix egentligen
@@ -67,6 +82,7 @@ p {
 }
 
 .info-box {
+  $yellow: #fcf8e3;
   $space-between: 14px;
   padding: 20px;
   margin-bottom: 30px;
@@ -88,5 +104,51 @@ p {
   }
   & > :last-child {
     margin-bottom: 0;
+  }
+
+  &.yellow {
+    background-color: $yellow;
+  }
+}
+
+.pdf-link {
+  margin: 0;
+  &::before {
+    margin-right: 0;
+  }
+}
+
+.person {
+  img {
+    vertical-align: middle;
+    margin-right: 6px;
+  }
+}
+
+// page-sub-heading kopierad from kursinfo-web - liknande i fanns i kurs-pm-web
+// TODO: kth-style-10: kolla övriga
+#page-sub-heading-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+#page-sub-heading-admin-link {
+  font-size: 1rem;
+  line-height: 1.375;
+  margin-bottom: 14px;
+  margin-top: 0.325rem;
+  text-align: right;
+}
+
+@media (max-width: 991.98px) {
+  #page-sub-heading-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: normal;
+  }
+  #page-sub-heading-admin-link {
+    text-align: left;
   }
 }
