init mobile menu panel from compoennt (and remove from publicLayout)

--- a/server/views/layouts/publicLayout.handlebars
+++ b/server/views/layouts/publicLayout.handlebars
@@ -19,33 +19,18 @@
 
   {{{render 'styles'}}}
 
-  {{!-- {{#if blocks.klaroConfig}}
+  {{#if blocks.klaroConfig}}
     {{{blocks.klaroConfig}}}
     {{prefixScript '/static/kth-style/js/klaro-no-css.js' 'head-scripts'}}
-  {{/if}} --}}
+  {{/if}}
 
   {{prefixScript '/static/vendor.js' 'head-scripts'}}
-  {{prefixModuleScript '/assets/js/index.js' 'head-scripts'}}
   {{prefixScript '/static/browserConfig' 'head-scripts'}}
   {{prefixScript '/static/kth-style/js/backtotop.js' 'head-scripts'}}
   {{{render 'head-scripts'}}}
 
   <script src="{{toolbarUrl}}"></script>
-  <script type="module">
-    import { MenuPanel } from '{{proxyPrefix}}/assets/js/index.js'
-    MenuPanel.initModal(
-      document.querySelector('.kth-menu-item.collapsable'),
-      document.querySelector('.kth-menu-panel--modal')
-    )
-    MenuPanel.initTranslationModal(
-      document.querySelector(".kth-menu-item.language"),
-      document.querySelector(".kth-translation")
-    )
-    MenuPanel.initModal(
-      document.querySelector(".kth-local-navigation--mobile .kth-button.menu"),
-      document.querySelector(".kth-local-navigation--mobile .kth-mobile-menu"),
-    );
-  </script>
+
   {{#if instrumentationKey}}
     {{#if klaroAnalyticsConsentCookie}}
       <script type="text/javascript">
