--- a/server/views/partials/headerLogotype.handlebars
+++ b/server/views/partials/headerLogotype.handlebars
@@ -1,4 +1,4 @@
-<a href="/" class="kth-logotype">
+<a href="/student" class="kth-logotype">
   <figure>
     <img class="blue" alt="Till KTH:s startsida" width="64" height="64" src="{{{proxyPrefix}}}/assets/logotype/logotype-blue.svg">
     <img class="white" alt="Till KTH:s startsida" width="64" height="64" src="{{{proxyPrefix}}}/assets/logotype/logotype-white.svg">
