--- a/public/css/node-web.scss
+++ b/public/css/node-web.scss
@@ -16,6 +16,7 @@
 @use '~@kth/style/scss/components/menu-panel.scss';
 @use '~@kth/style/scss/components/content.scss';
 @use '~@kth/style/scss/components/local-navigation.scss';
+@use '~@kth/style/scss/components/kpm.scss';
 
 @use '~@kth/style/scss/tokens/colors.scss';
 @use '~@kth/style/scss/tokens/typography.scss' as t;
