--- a/public/js/app/components/NewSearchResultDisplay/style.scss
+++ b/public/js/app/components/NewSearchResultDisplay/style.scss
@@ -5,3 +5,38 @@
 }
 
 // more styles will be added here
+
+.course-card {
+  border: 1px solid rgba(230, 230, 230, 1);
+  border-radius: 4px;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.1);
+  margin-bottom: 28px;
+  .course-header {
+    padding: 1rem;
+    h3 {
+      margin: 0;
+      font-size: 24px;
+      font-weight: 700;
+      color: #000;
+      line-height: 32px;
+    }
+    .course-code,
+    .course-period {
+      display: block;
+      color: #000;
+      font-weight: 700;
+      line-height: 24px;
+    }
+  }
+}
+
+.course-details {
+  background-color: #f2f2f2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.1);
+}
