--- a/public/js/app/components/NewSearchResultDisplay/style.scss
+++ b/public/js/app/components/NewSearchResultDisplay/style.scss
@@ -1,3 +1,6 @@
+@use '~@kth/style/scss/tokens/colors.scss' as colors;
+@use '~@kth/style/scss/tokens/typography.scss' as typography;
+
 .search-result-header {
   display: flex;
   justify-content: space-between;
@@ -5,3 +8,35 @@
 }
 
 // more styles will be added here
+
+.course-card {
+  border: 1px solid colors.$color-gray-light;
+  border-radius: 4px;
+  width: 100%;
+  background-color: var(--color-background);
+  box-shadow: 2px 2px 5px 0px colors.$color-gray-light;
+  margin-bottom: 28px;
+  .course-header {
+    padding: 1rem;
+    h3 {
+      @include typography.font-heading-m;
+      margin: 0;
+    }
+    .course-code,
+    .course-period {
+      display: block;
+      @include typography.font-heading-xs;
+    }
+  }
+
+  .course-details {
+    background-color: var(--color-background-alt);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+    box-shadow: 2px 2px 5px 0px colors.$color-gray-light;
+  }
+}
