--- a/public/js/app/components/NewSearchResultDisplay/style.scss
+++ b/public/js/app/components/NewSearchResultDisplay/style.scss
@@ -1,4 +1,15 @@
 @use '~@kth/style/scss/tokens/colors.scss' as colors;
+@use '~@kth/style/scss/tokens/typography.scss' as typography;
+@use '~@kth/style/scss/tokens/spacing.scss' as space;
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 
 .course-search-results {
   .search-result-header {
@@ -7,71 +18,85 @@
     align-items: center;
     .toggle-container {
       display: inline-flex;
-      border: 2px solid colors.$color-gray-medium;
-      border-radius: 5px;
-      overflow: hidden;
-      font-family: Arial, sans-serif;
-    }
-
-    .toggle-button {
-      padding: 10px 20px;
-      cursor: pointer;
-      border: none;
-      background-color: colors.$color-white;
-      color: colors.$color-gray-dark;
-      display: flex;
-      align-items: center;
-      gap: 5px;
-      font-size: 16px;
-    }
-
-    .toggle-button svg {
-      fill: colors.$color-gray-dark;
-    }
-
-    .toggle-button.active {
-      background-color: colors.$color-blue-light;
-      color: colors.$color-blue-kth;
-      border-color: 1px solid colors.$color-blue-lake;
+      border-radius: 4px;
+      .toggle-button {
+        padding: space.$space-8;
+        cursor: pointer;
+        background-color: colors.$color-white;
+        color: colors.$color-gray-dark;
+        display: flex;
+        align-items: center;
+        gap: space.$space-4;
+        border: 2px solid colors.$color-gray-medium;
+        border-radius: 4px;
+        outline: 0;
+        svg {
+          fill: colors.$color-gray-dark;
+        }
+        &.active {
+          background-color: colors.$color-blue-light;
+          border-color: colors.$color-blue-lake;
+          color: colors.$color-blue-kth;
+          svg {
+            fill: colors.$color-blue-kth;
+          }
+        }
+        &:first-child {
+          border-top-right-radius: 0;
+          border-bottom-right-radius: 0;
+          border-right-width: 0;
+          &.active {
+            border-right-width: 2px;
+          }
+        }
+        &:last-child {
+          border-top-left-radius: 0;
+          border-bottom-left-radius: 0;
+          border-left-width: 0;
+          &.active {
+            border-left-width: 2px;
+          }
+        }
+      }
     }
   }
+
   .course-card {
-    border: 1px solid rgba(230, 230, 230, 1);
+    border: 1px solid colors.$color-gray-light;
     border-radius: 4px;
     width: 100%;
-    background-color: #fff;
-    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.1);
-    margin-bottom: 28px;
+    background-color: var(--color-background);
+    box-shadow: 2px 2px 5px 0px colors.$color-gray-light;
+    margin-bottom: space.$space-24;
+    animation: fadeIn 0.5s ease forwards;
     .course-header {
-      padding: 1rem;
+      padding: space.$space-16;
       h3 {
-        margin: 0;
-        font-size: 24px;
-        font-weight: 700;
-        color: #000;
-        line-height: 32px;
+        @include typography.font-heading-m;
+        margin: space.$space-0;
       }
       .course-code,
       .course-period {
         display: block;
-        color: #000;
-        font-weight: 700;
-        line-height: 24px;
+        @include typography.font-heading-xs;
       }
     }
-  }
 
-  .course-details {
-    background-color: #f2f2f2;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.1);
+    .course-details {
+      background-color: var(--color-background-alt);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: space.$space-16;
+      border-bottom-right-radius: 4px;
+      border-bottom-left-radius: 4px;
+      box-shadow: 2px 2px 5px 0px colors.$color-gray-light;
+    }
   }
   .table-container {
     width: 100%;
     overflow-x: auto;
+    animation: fadeIn 0.5s ease forwards;
     th,
     td {
       vertical-align: middle;
