--- a/public/js/app/components/NewSearchResultDisplay/style.scss
+++ b/public/js/app/components/NewSearchResultDisplay/style.scss
@@ -1,11 +1,64 @@
 @use '~@kth/style/scss/tokens/colors.scss' as colors;
 @use '~@kth/style/scss/tokens/typography.scss' as typography;
+@use '~@kth/style/scss/tokens/spacing.scss' as space;
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 
 .course-search-results {
   .search-result-header {
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
+    .toggle-container {
+      display: inline-flex;
+      border-radius: 4px;
+      .toggle-button {
+        padding: space.$space-8;
+        cursor: pointer;
+        background-color: colors.$color-white;
+        color: colors.$color-gray-dark;
+        display: flex;
+        align-items: center;
+        gap: space.$space-4;
+        border: 2px solid colors.$color-gray-medium;
+        border-radius: 4px;
+        outline: 0;
+        svg {
+          fill: colors.$color-gray-dark;
+        }
+        &.active {
+          background-color: colors.$color-blue-light;
+          border-color: colors.$color-blue-lake;
+          color: colors.$color-blue-kth;
+          svg {
+            fill: colors.$color-blue-kth;
+          }
+        }
+        &:first-child {
+          border-top-right-radius: 0;
+          border-bottom-right-radius: 0;
+          border-right-width: 0;
+          &.active {
+            border-right-width: 2px;
+          }
+        }
+        &:last-child {
+          border-top-left-radius: 0;
+          border-bottom-left-radius: 0;
+          border-left-width: 0;
+          &.active {
+            border-left-width: 2px;
+          }
+        }
+      }
+    }
   }
 
   .course-card {
@@ -14,12 +67,13 @@
     width: 100%;
     background-color: var(--color-background);
     box-shadow: 2px 2px 5px 0px colors.$color-gray-light;
-    margin-bottom: 28px;
+    margin-bottom: space.$space-24;
+    animation: fadeIn 0.5s ease forwards;
     .course-header {
-      padding: 1rem;
+      padding: space.$space-16;
       h3 {
         @include typography.font-heading-m;
-        margin: 0;
+        margin: space.$space-0;
       }
       .course-code,
       .course-period {
@@ -33,7 +87,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 1rem;
+      padding: space.$space-16;
       border-bottom-right-radius: 4px;
       border-bottom-left-radius: 4px;
       box-shadow: 2px 2px 5px 0px colors.$color-gray-light;
@@ -42,6 +96,7 @@
   .table-container {
     width: 100%;
     overflow-x: auto;
+    animation: fadeIn 0.5s ease forwards;
     th,
     td {
       vertical-align: middle;
