fix(KP-353): remove unnecessary Row component usage

--- a/public/js/app/pages/styles/searchPage.scss
+++ b/public/js/app/pages/styles/searchPage.scss
@@ -4,7 +4,8 @@
   details {
     margin-bottom: space.$space-0;
   }
-  a {
-    margin-top: space.$space-16;
+  .link-to {
+    display: block;
+    margin-top: space.$space-24;
   }
 }
