feat(KP-362): some tiny omprovements has been made

--- a/public/js/app/components/NewSearchResultDisplay/style.scss
+++ b/public/js/app/components/NewSearchResultDisplay/style.scss
@@ -16,6 +16,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: space.$space-2;
     .toggle-container {
       display: inline-flex;
       border-radius: 4px;
