--- a/public/js/app/components/SidebarFilters/styles.scss
+++ b/public/js/app/components/SidebarFilters/styles.scss
@@ -30,10 +30,10 @@
   top: var(--kpm-bar-height);
   background-color: var(--color-background);
   z-index: 1000;
-  @extend .kth-local-navigation--mobile;
-  padding: space.$space-8;
+  padding: space.$space-8 space.$space-0;
   margin-bottom: space.$space-12;
   box-shadow: 0px -2px 6px 4px var(--color-background);
+  @extend .kth-local-navigation--mobile;
   &__dialog {
     @extend .kth-mobile-menu;
     @extend .left;
