--- a/server/views/partials/headerLogotype.handlebars
+++ b/server/views/partials/headerLogotype.handlebars
@@ -4,7 +4,10 @@
 <a href="/" class="kth-logotype">
 {{/if}}
   <figure>
-    <img class="blue" alt="Till KTH:s startsida" width="64" height="64" src="{{{proxyPrefix}}}/assets/logotype/logotype-blue.svg">
+    {{#if (eq theme "external")}}
     <img class="white" alt="Till KTH:s startsida" width="64" height="64" src="{{{proxyPrefix}}}/assets/logotype/logotype-white.svg">
+    {{else}}
+    <img class="blue" alt="Till KTH:s startsida" width="64" height="64" src="{{{proxyPrefix}}}/assets/logotype/logotype-blue.svg">
+    {{/if}}
   </figure>
 </a>
