--- a/public/js/app/components/SidebarFilters/styles.scss
+++ b/public/js/app/components/SidebarFilters/styles.scss
@@ -34,6 +34,13 @@
   margin-bottom: space.$space-12;
   box-shadow: 0px -2px 6px 4px var(--color-background);
   @extend .kth-local-navigation--mobile;
+  display: block;
+  width: auto;
+  padding: 0;
+
+  @media (min-width: 992px) {
+    display: none;
+  }
   &__dialog {
     @extend .kth-mobile-menu;
     @extend .left;
