--- a/public/css/_shared.scss
+++ b/public/css/_shared.scss
@@ -16,6 +16,9 @@
       }
     }
   }
+  .kth-local-navigation--mobile {
+    padding: 0;
+  }
   label:has(+ input) {
     @include typography.font-heading-xs;
     display: block;
