--- a/public/js/app/components/NewSearchResultDisplay/style.scss
+++ b/public/js/app/components/NewSearchResultDisplay/style.scss
@@ -113,8 +113,9 @@
       border-bottom-right-radius: 4px;
       border-bottom-left-radius: 4px;
       box-shadow: 2px 2px 5px 0px colors.$color-gray-light;
-      @media (max-width: 600px) {
+      @media (max-width: 700px) {
         flex-wrap: wrap;
+        row-gap: space.$space-16;
       }
       .course-details {
         display: flex;
@@ -122,64 +123,76 @@
         justify-content: space-between;
         font-weight: typography.$font-bold;
         gap: space.$space-8;
-        @media (min-width: 1100px) {
-          width: 30%;
-        }
-        @media (min-width: 992px) and (max-width: 1200px) {
-          width: 35%;
-        }
-        @media (min-width: 700px) and (max-width: 992px) {
-          width: 40%;
-        }
-        @media (min-width: 600px) and (max-width: 700px) {
+        @media (min-width: 1200px) {
           width: 45%;
         }
-        @media (max-width: 600px) {
+        @media (min-width: 992px) and (max-width: 1200px) {
+          width: 50%;
+        }
+        @media (min-width: 700px) and (max-width: 992px) {
+          width: 50%;
+        }
+        @media (max-width: 700px) {
           flex: 1 1 100%;
         }
         .course-location {
-          position: relative;
-          padding-top: 30px;
           display: flex;
           flex-direction: column;
-          &:before {
-            @include icons.icon-home;
-            position: absolute;
-            top: -2px;
-            width: 35px;
-            height: 32px;
-            right: calc(50% - 17.5px);
-            background-color: var(--color-tertiary);
+          justify-content: center;
+          .icon {
+            color: var(--color-tertiary);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: space.$space-2;
+            font-weight: bold;
+            padding-bottom: space.$space-8;
+            &:before {
+              @include icons.icon-home;
+              width: 32px;
+              height: 30px;
+              background-color: var(--color-tertiary);
+            }
           }
         }
         .course-language {
-          position: relative;
-          padding-top: 30px;
           display: flex;
           flex-direction: column;
-          &:before {
-            @include icons.icon-language;
-            position: absolute;
-            top: 0;
-            width: 30px;
-            height: 30px;
-            right: calc(50% - 15px);
-            background-color: var(--color-tertiary);
+          justify-content: center;
+          .icon {
+            color: var(--color-tertiary);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: space.$space-2;
+            font-weight: bold;
+            padding-bottom: space.$space-8;
+            &:before {
+              @include icons.icon-language;
+              width: 30px;
+              height: 30px;
+              background-color: var(--color-tertiary);
+            }
           }
         }
         .course-pace {
-          position: relative;
-          padding-top: 30px;
           display: flex;
           flex-direction: column;
-          &:before {
-            @include icons.icon-schedule;
-            position: absolute;
-            top: 0;
-            width: 30px;
-            height: 30px;
-            right: calc(50% - 15px);
-            background-color: var(--color-tertiary);
+          justify-content: center;
+          .icon {
+            color: var(--color-tertiary);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: space.$space-2;
+            font-weight: bold;
+            padding-bottom: space.$space-8;
+            &:before {
+              @include icons.icon-schedule;
+              width: 30px;
+              height: 30px;
+              background-color: var(--color-tertiary);
+            }
           }
         }
       }
