--- a/public/js/app/components/NewSearchResultDisplay/style.scss
+++ b/public/js/app/components/NewSearchResultDisplay/style.scss
@@ -104,15 +104,103 @@
       }
     }
 
-    .course-details {
+    .course-footer {
       background-color: var(--color-background-alt);
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: space.$space-16;
+      padding: space.$space-8 space.$space-16;
       border-bottom-right-radius: 4px;
       border-bottom-left-radius: 4px;
       box-shadow: 2px 2px 5px 0px colors.$color-gray-light;
+      @media (max-width: 700px) {
+        flex-wrap: wrap;
+        row-gap: space.$space-16;
+      }
+      .course-details {
+        display: flex;
+        align-items: start;
+        justify-content: space-between;
+        font-weight: typography.$font-bold;
+        gap: space.$space-8;
+        @media (min-width: 1200px) {
+          width: 45%;
+        }
+        @media (min-width: 992px) and (max-width: 1200px) {
+          width: 50%;
+        }
+        @media (min-width: 700px) and (max-width: 992px) {
+          width: 50%;
+        }
+        @media (max-width: 700px) {
+          flex: 1 1 100%;
+        }
+        .course-location {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          .icon {
+            color: var(--color-tertiary);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: space.$space-2;
+            font-weight: bold;
+            padding-bottom: space.$space-8;
+            &:before {
+              @include icons.icon-home;
+              width: 32px;
+              height: 30px;
+              background-color: var(--color-tertiary);
+            }
+          }
+        }
+        .course-language {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          .icon {
+            color: var(--color-tertiary);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: space.$space-2;
+            font-weight: bold;
+            padding-bottom: space.$space-8;
+            &:before {
+              @include icons.icon-language;
+              width: 30px;
+              height: 30px;
+              background-color: var(--color-tertiary);
+            }
+          }
+        }
+        .course-pace {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          .icon {
+            color: var(--color-tertiary);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: space.$space-2;
+            font-weight: bold;
+            padding-bottom: space.$space-8;
+            &:before {
+              @include icons.icon-schedule;
+              width: 30px;
+              height: 30px;
+              background-color: var(--color-tertiary);
+            }
+          }
+        }
+      }
+      .course-link {
+        @media (max-width: 600px) {
+          padding-top: space.$space-20;
+        }
+      }
     }
   }
   .table-container {
@@ -122,6 +210,9 @@
     th,
     td {
       vertical-align: middle;
+    }
+    td:last-child {
+      white-space: pre-line;
     }
   }
 }
