chore(KP-445): import breadcrumbs.scss

--- a/public/css/node-web.scss
+++ b/public/css/node-web.scss
@@ -17,6 +17,7 @@
 @use '~@kth/style/scss/components/content.scss';
 @use '~@kth/style/scss/components/local-navigation.scss';
 @use '~@kth/style/scss/components/kpm.scss';
+@use '@kth/style/scss/components/breadcrumbs.scss';
 
 @use '~@kth/style/scss/tokens/colors.scss';
 @use '~@kth/style/scss/tokens/typography.scss' as t;
